fix overlapping of heading and close button in 'genericModalContent'

--- a/app/assets/stylesheets/stash_engine/ui.css
+++ b/app/assets/stylesheets/stash_engine/ui.css
@@ -4527,6 +4527,10 @@ h6 {
   color: #cf4817;
 }
 
+#genericModalContent > *:first-child {
+  margin-right: calc(26px + 2rem);
+}
+
 .c-modal-h1 {
   font-size: 1.5em;
 }
